# neo4j-backup

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CI.md  CLI-CONTRACT.md  DESIGN.md  IMPORT.md  MCP.md  POLICY.md  README.md  RECOVERY.md  RELEASING.md  RESEARCH.md  ROADMAP.md  STACK.md  findings.md  justfile  llms.txt  mkdocs-stage.sh  mkdocs.yml  second-pass-neo4j-docs.md
.claude/skills/neo4j-backup/: SKILL.md
.github/workflows/: ci.yml  pages.yml  release.yml
airflow/: README.md  install.sh  smoke_e2e.py  smoke_k8s.py  smoke_metadata.py  smoke_pitr.py  smoke_system.py  standalone.sh
airflow/dags/: avp_dags.py  backup_dag.py  metadata_dag.py  restore_dag.py  scaffold_dag.py  system_dag.py
airflow/tests/: test_dags_import.py
bootstrap/: adopt.sh  backup.sh  bootstrap.sh  demo_pitr.sh  lib.sh  naming.sh  restore.sh  restore_system.sh
bootstrap/demo_data/: acme-audit.cypher  acme-graph.cypher  acme-orders.cypher
diagrams/: README.md  architecture.dot  dagster-pipeline.dot  naming.dot  render.sh  restore-cutover.dot  storage-layout.dot
docker/: compose.yaml
examples/ci/: README.md  forgejo-actions.yml  github-actions.yml  gitlab-ci.yml
k3d/: down.sh  up.sh
orchestrator/: README.md  pyproject.toml  smoke_cli.py  smoke_file_restore.py  smoke_import.py  smoke_k8s.py  smoke_local.py  smoke_mcp.py  smoke_metadata.py  smoke_phase6.py  smoke_verify.py
orchestrator/deploy/: DEPLOY.md  dagster.yaml
orchestrator/neo4j_backup_airflow/: __init__.py  config.py  execution.py  upload.py
orchestrator/neo4j_backup_cli/: __init__.py  __main__.py
orchestrator/neo4j_backup_core/: __init__.py  cli_contract.py  clients.py  cutover.py  env.py  metadata.py  naming.py  ops.py  paths.py  policy.py  retry.py  secrets.py
orchestrator/neo4j_backup_dagster/: __init__.py  definitions.py  resources.py
orchestrator/neo4j_backup_dagster.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
orchestrator/neo4j_backup_mcp/: __init__.py  __main__.py  server.py  tools.py
orchestrator/tests/: cli_contract.py  test_agents_doc.py  test_azure.py  test_by_name.py  test_cli.py  test_cli_contract.py  test_cutover.py  test_gcs.py  test_mcp_server.py  test_mcp_tools.py  test_naming_parity.py  test_objectstore.py  test_ops.py  test_paths.py  test_policy_loader.py  test_policy_source.py  test_resolve.py  test_resources.py  test_retry.py  test_secrets.py  test_seed.py  test_upload.py
policies/: demo.yaml
