[project]
name = "neo4j-backup-dagster"
version = "0.1.0"
description = "Policy-driven Neo4j backup/restore orchestration (Dagster code location)"
requires-python = ">=3.10"
dependencies = [
  "dagster>=1.8",
  "dagster-k8s>=0.24",
  "neo4j>=5.0",
  "boto3>=1.34",
  "pydantic>=2",
  "pyyaml>=6",
]

[project.optional-dependencies]
dev = ["pytest", "dagster-webserver"]
# Airflow adapter deps are installed with Airflow's constraints (see airflow/README.md);
# this extra documents them. neo4j_backup_core needs only neo4j/boto3/pydantic/pyyaml.
airflow = [
  "apache-airflow>=3",
  "apache-airflow-providers-cncf-kubernetes",
  "apache-airflow-providers-amazon",
  "apache-airflow-providers-neo4j",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["neo4j_backup_core*", "neo4j_backup_dagster*", "neo4j_backup_airflow*"]

# `dagster dev` and the code-location entry resolve the Definitions from here.
[tool.dagster]
module_name = "neo4j_backup_dagster.definitions"
code_location_name = "neo4j_backup"
