[project]
name = "neo4j-backup-dagster"
dynamic = ["version"]  # from neo4j_backup_core.__version__ (single source; see RELEASING.md)
description = "Policy-driven Neo4j backup/restore orchestration (Dagster code location)"
requires-python = ">=3.10"
dependencies = [
  "dagster>=1.8",
  "neo4j>=5.0",
  "boto3>=1.34",
  "pydantic>=2",
  "pyyaml>=6",
  # Pin Dagster's transitive gRPC health stack: grpcio-health-checking >=1.82 ships
  # generated protobuf code (gencode 7.35.0) that requires a newer protobuf runtime than
  # the one resolved here (6.33.x), so `dagster definitions validate` fails to load
  # grpc_health. 1.81.x is the last compatible line. grpcio tracks the same version.
  "grpcio-health-checking<1.82",
  "grpcio<1.82",
]

[project.optional-dependencies]
dev = ["pytest", "dagster-webserver"]
# Only needed for RUNNER_MODE=k8s. Subprocess (EC2/VM) deployments don't need it — the
# import is lazy, so the code location loads without dagster-k8s installed.
k8s = ["dagster-k8s>=0.24"]
# Cloud backends (#52) — install only the one you use; each SDK is lazy-imported.
azure = ["azure-storage-blob>=12"]
gcp = ["google-cloud-storage>=2"]
# Airflow adapter deps are installed with Airflow's constraints (see airflow/README.md);
# this extra documents them. neo4j_backup_core needs only neo4j/boto3/pydantic/pyyaml.
airflow = [
  "apache-airflow>=3",
  "apache-airflow-providers-cncf-kubernetes",
  "apache-airflow-providers-amazon",
  "apache-airflow-providers-neo4j",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "neo4j_backup_core.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["neo4j_backup_core*", "neo4j_backup_dagster*", "neo4j_backup_airflow*"]

# `dagster dev` and the code-location entry resolve the Definitions from here.
[tool.dagster]
module_name = "neo4j_backup_dagster.definitions"
code_location_name = "neo4j_backup"
